Review code and possibly will fix when all new code is merged but checking date unknown is still not letting you move forward

--- a/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/alternative_means_diligent_search.yml
+++ b/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/alternative_means_diligent_search.yml
@@ -94,6 +94,8 @@ code: |
     other_parties[0].address.state 
     other_parties[0].address.zip
     date_last_known
+  last_contact_unknown
+  last_contact_guess
   last_contact_date
   check_phone
   check_text
@@ -128,9 +130,9 @@ continue button field: service_by_alternate_means_diligent_search_intro
 question: |
   Motion For Service By Alternate Means and Affidavit of Diligent Search
 subquestion: |
-  If the sheriff could not serve the defendant in person or if you do not know where the Defendant lives, ask the court for an order for Alternate Service by Publication and Mailing. 
+  You should use this form and ask the court for an order for Alternate Service by Publication and Mailing if you do not know where the Defendant lives or if the sheriff could not serve the defendant in person.
   
-   Probate and Family courts across Massachusetts do not all use the same forms. **Before you begin this form**, Call the clerk at the court that is hearing your case and ask the clerk your which form you should use:
+   Probate and Family courts across Massachusetts do not all use the same forms. **Before you begin this form**, call the clerk at the court that is hearing your case and ask the clerk your which form you should use:
    
      * The Motion for Service by Alternate Means and Affidavit of Diligent Search; **or**
      * The Motion for Alternate Service by Publication and Mailing and the Affidavit in Support of Motion for Alternate Service. 
@@ -143,7 +145,7 @@ help:
     
     There is a Probate and Family Court in each county in Massachusetts.
     
-    If your spouse still lives in the county where you last lived together, you have to file for separate support in the [Probate  Family Court](https://www.mass.gov/orgs/probate-and-family-court/locations?_page=1) in that county. If your spouse does not live in the same county where you last lived together, you can file a Complaint for Separate Support in the Probate and Family Court in the county where you live or in the Probate and Family Court in the county where your spouse lives.
+    The county where you file for separate support depends on the county your spouse lives in. If your spouse still lives in the county where you last lived together, you have to file a Complaint for Separate Support in the [Probate  Family Court](https://www.mass.gov/orgs/probate-and-family-court/locations?_page=1) in that county. If your spouse does not live in the same county where you last lived together, you can file for separate support in the Probate and Family Court in the county where you live or in the county where your spouse lives.
  
     Only you know the right choice.
     
@@ -154,13 +156,13 @@ help:
     listed on your court paperwork.
 
 ---
-id: form selcton 
+id: form selection 
 question: | 
   What form did the clerk tell you to use? 
 subquestion: | 
   Call the court and ask the clerk. 
 field: form_selector 
-buttons: 
+choices: 
   - "Service by Alternate Means and Affidavit of Diligent Search": True
   -  "Alternate Service by Publication and Mailing and the Affidavit in Support of Motion for Alternate Service": False 
 ---
@@ -169,9 +171,9 @@ event: kick_out_other_form
 question: |
   Sorry
 subquestion: |
-  You said the court uses "The Motion for Alternate Service by Publication and Mailing and the Affidavit in Support of Motion for Alternate Service."
+  The clerk told you the court uses "The Motion for Alternate Service by Publication and Mailing and the Affidavit in Support of Motion for Alternate Service."
   
-  We can only help if the court uses The Motion for Service by Alternate Means and Affidavit of Diligent Search .  
+  We are only able to help if the court uses "The Motion for Service by Alternate Means and Affidavit of Diligent Search".  
   
    To find the Motion for Alternate Service by Publication and Mailing and the Affidavit in Support of Motion for Alternate Service tap [here](https://www.masslegalhelp.org/family/cjd400-motion-for-alternate-service-and-affidavit.pdf).
   
@@ -253,8 +255,10 @@ attachment:
       - "specify_info": ${ specify_info }
       - "date_last_known": ${ format_date(date_last_known='MM/dd/yyyy') or address_date_guess }
       - "last_contact_date": ${ format_date(last_contact_date, format='MM/dd/yyyy') or last_contact_guess}
-      - "check_phone_text": ${ check_phone or check_text }	     
-      - "phone_response": ${ phone_response + text_response }
+      - "check_phone_text": ${ check_phone }
+      - "check_phone_text": ${ check_text }
+      - "phone_response": ${ phone_response }
+      - "phone_response": ${ text_response }
       - "check_email": ${ check_email }
       - "email_response": ${ email_response }
       - "social_check": ${ social_check }
